[tool.poetry]
name = "reflex-login"
version = "0.1.0"
description = ""
authors = ["Mike Lu <mcumaple@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
reflex = "^0.5.5"
requests = "^2.32.3"
aiohttp = "^3.9.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
